--- a/app/src/main/res/layout/content_mainpage.xml
+++ b/app/src/main/res/layout/content_mainpage.xml
@@ -19,7 +19,10 @@
         android:id="@+id/sliding_tabs"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:paddingTop="@dimen/small_padding"
+        android:paddingBottom="@dimen/small_padding"
         android:layout_gravity="center_horizontal"
+        app:tabGravity="center"
         android:textAlignment="center"
         app:tabTextColor="@color/grey"
         style="@style/MyCustomTabLayout"
