--- a/app/src/main/res/layout/create_event.xml
+++ b/app/src/main/res/layout/create_event.xml
@@ -6,8 +6,8 @@ create event description: create_event_description
 -->
 <ScrollView
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
-    android:theme="@style/AppTheme"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context=".MainPage"
